--- a/climacell_new_technologies_homework.ipynb
+++ b/climacell_new_technologies_homework.ipynb
@@ -14,20 +14,20 @@
     "***\n",
     "# Table of Contents\n",
     "\n",
-    "1. [Goals](#goals)\n",
-    "2. [Summary](#summary)\n",
-    "3. [Import Packages](#import)\n",
-    "4. [Load Data](#load)\n",
-    "   1. [Load ASOS CID data](#CID)\n",
-    "   2. [Set correct data types](#types)\n",
-    "   3. [Handle duplicate and missing data](#missing)\n",
-    "5. [Exploratory Data Analysis](#eda)\n",
-    "   1. [Plot data](#plot)\n",
-    "   2. [Autocorrelation](#autocorr)\n",
-    "6. [Model Building](#model)\n",
-    "   1. [ARMA Model](#arma)\n",
-    "7. [Results](#results)\n",
-    "   1. [Forecast](#forecast)"
+    "1. [Goals](./climacell_new_technologies_homework.ipynb#goals)\n",
+    "2. [Summary](./climacell_new_technologies_homework.ipynb#summary)\n",
+    "3. [Import Packages](./climacell_new_technologies_homework.ipynb#import)\n",
+    "4. [Load Data](./climacell_new_technologies_homework.ipynb#load)\n",
+    "   1. [Load ASOS CID data](./climacell_new_technologies_homework.ipynb#CID)\n",
+    "   2. [Set correct data types](./climacell_new_technologies_homework.ipynb#types)\n",
+    "   3. [Handle duplicate and missing data](./climacell_new_technologies_homework.ipynb#missing)\n",
+    "5. [Exploratory Data Analysis](./climacell_new_technologies_homework.ipynb#eda)\n",
+    "   1. [Plot data](./climacell_new_technologies_homework.ipynb#plot)\n",
+    "   2. [Autocorrelation](./climacell_new_technologies_homework.ipynb#autocorr)\n",
+    "6. [Model Building](./climacell_new_technologies_homework.ipynb#model)\n",
+    "   1. [ARMA Model](./climacell_new_technologies_homework.ipynb#arma)\n",
+    "7. [Results](./climacell_new_technologies_homework.ipynb#results)\n",
+    "   1. [Forecast](./climacell_new_technologies_homework.ipynb#forecast)"
    ]
   },
   {
